logcord/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logcord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logcord
  template:
    metadata:
      labels:
        app: logcord
    spec:
      containers:
        - name: logcord
          image: ghcr.io/python-discord/logcord:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
            limits:
              cpu: 40m
              memory: 350Mi
          ports:
            - containerPort: 8000
