logcord/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logcord
spec:
  selector:
    app: logcord
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
