logcord/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: logcord-cloudflare-access
spec:
  forwardAuth:
    address: http://traefik-auth-cloudflare.default.svc.cluster.local:80/auth/4b5e0457a961d6ff6a2921a9294b70c7941abee5c30c8e35b0af8f2879f38ff2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: logcord
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`logcord.pythondiscord.com`)
    kind: Rule
    services:
    - name: logcord
      port: 80
    middlewares:
      - name: logcord-cloudflare-access
      - name: global-chain
  tls:
    secretName: "pythondiscord.com-tls"
